# simple_boilerplate

./: CMakeLists.txt  readme.md  setup.sh
app/: main.cpp
include/: Sample.hpp
src/: Sample.cpp
